# REXSapi

./: .clang-format  .gitignore  CMakeLists.txt  README.md  notizen.md
.github/workflows/: build_cmake.yml
cmake/: create_docs.cmake  fetch_doctest.cmake  fetch_fmt.cmake  fetch_json.cmake  fetch_pugixml.cmake
design/: database.puml  loader.puml  validator.puml
docker/: Dockerfile  README.md  build.sh
examples/: BuilderExample.cxx  CMakeLists.txt  ModelChecker.cxx  ModelConverter.cxx  example.cxx
include/rexsapi/: Attribute.hxx  Base64.hxx  CodedValue.hxx  Component.hxx  ConversionHelper.hxx  Defines.hxx  Exception.hxx  FileTypes.hxx  FileUtils.hxx  Format.hxx  Json.hxx  JsonModelLoader.hxx  JsonModelSerializer.hxx  JsonSchemaValidator.hxx  JsonSerializer.hxx  JsonValueDecoder.hxx  LoadSpectrum.hxx  LoaderResult.hxx  Mode.hxx  Model.hxx  ModelBuilder.hxx  ModelHelper.hxx  ModelLoader.hxx  ModelSaver.hxx  Relation.hxx  Result.hxx  RexsVersion.hxx  Rexsapi.hxx  Types.hxx  Unit.hxx  ValidityChecker.hxx  Value.hxx  Value_Details.hxx  XMLModelLoader.hxx  XMLModelSerializer.hxx  XMLParser.hxx  XMLSerializer.hxx  XMLValueDecoder.hxx  XSDSchemaValidator.hxx  Xml.hxx  (+2 more)
include/rexsapi/compatibility/: Defines.hxx
include/rexsapi/database/: Attribute.hxx  Component.hxx  ComponentAttributeMapper.hxx  EnumValues.hxx  FileResourceLoader.hxx  Interval.hxx  LoaderResult.hxx  Model.hxx  ModelLoader.hxx  ModelRegistry.hxx  ResourceLoader.hxx  Unit.hxx  ValueType.hxx  XMLModelLoader.hxx
include/rexsapi/xml/: XSDSchemaValidator.hxx
models/: rexs-schema.json  rexs-schema.xsd
src/: CMakeLists.txt  Version.hxx.in
test/: AttributeTest.cxx  Base64Test.cxx  CMakeLists.txt  CodedValuesTest.cxx  ComponentAttributeMapperTest.cxx  ConversionHelperTest.cxx  FileResourceLoaderTest.cxx  FileUtilsTest.cxx  IntervalTest.cxx  JsonModelLoaderTest.cxx  JsonModelSerializerTest.cxx  JsonSchemaValidatorTest.cxx  JsonValueDecoderTest.cxx  LoadSpectrumTest.cxx  LoaderResultTest.cxx  ModeTest.cxx  ModelBuilderTest.cxx  ModelHelperTest.cxx  ModelLoaderTest.cxx  ModelRegistryTest.cxx  ModelTest.cxx  ResultTest.cxx  RexsVersionTest.cxx  TemporaryDirectory.hxx  TestHelper.hxx.in  TestModel.hxx  TestModelLoader.hxx  TypesTest.cxx  UnitTest.cxx  ValidityCheckerTest.cxx  ValueTest.cxx  ValueTypeTest.cxx  XMLModelLoaderTest.cxx  XMLModelSerializerTest.cxx  XMLUtilsTest.cxx  XMLValueDecoderTest.cxx  XSDSchemaValidatorTest.cxx  ZipArchiveTest.cxx  main.cpp
test/database/: AttributeTest.cxx  ComponentAttributeMapperTest.cxx  ComponentTest.cxx  EnumValuesTest.cxx  FileResourceLoaderTest.cxx  ModelRegistryTest.cxx  ModelTest.cxx  UnitTest.cxx  XMLModelLoaderTest.cxx
test/example_models/: FVA-Industriegetriebe_2stufig_1-4.rexs  FVA_worm_stage_1-4.rexs
tools/: CMakeLists.txt  Cli11.hxx  ModelChecker.cxx  ModelConverter.cxx  ToolsHelper.hxx
